--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@ mqtt://api.wia.io (port 1883) - Non-secure
 <span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)({</span>
     <span class="na">secretKey</span><span class="p">:</span> <span class="s1">'secretKey'</span>
 <span class="p">});</span>
+
+<span class="c1">// With public key in constructor object</span>
+<span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)({</span>
+    <span class="na">publicKey</span><span class="p">:</span> <span class="s1">'publicKey'</span>
+<span class="p">});</span>
 </code></pre>
 
 <p>If you are connecting using your own MQTT client, put your access token in the username field and blank space for the password.</p>
@@ -191,8 +196,8 @@ mqtt://api.wia.io (port 1883) - Non-secure
         <span class="na">grantType</span><span class="p">:</span> <span class="s2">"password"</span><span class="p">,</span>
         <span class="na">scope</span><span class="p">:</span> <span class="s2">"user"</span>
     <span class="p">},</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">accessToken</span><span class="p">)</span> <span class="p">{</span>
-        <span class="k">if</span> <span class="p">(</span><span class="nx">err</span><span class="p">)</span> <span class="c1">// Handle error</span>
-        <span class="k">else</span> <span class="k">if</span> <span class="p">(</span><span class="nx">accessToken</span><span class="p">)</span> <span class="c1">// Got token!</span>
+        <span class="k">if</span> <span class="p">(</span><span class="nx">err</span><span class="p">)</span> <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">err</span><span class="p">);</span>
+        <span class="k">else</span> <span class="k">if</span> <span class="p">(</span><span class="nx">accessToken</span><span class="p">)</span> <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">accessToken</span><span class="p">);</span>
     <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="cp">#import "Wia.h"
@@ -761,15 +766,8 @@ mqtt://api.wia.io (port 1883) - Non-secure
 </code></pre>
 
 <blockquote>
-<p>Example Response</p>
+<p>The above command returns status 200 OK when a device has been deleted.</p>
 </blockquote>
-<pre class="highlight json"><code><span class="p">{</span><span class="w">
-    </span><span class="nt">"id"</span><span class="p">:</span><span class="w"> </span><span class="s2">"dev_23idgksdf0smd"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Device One"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"createdAt"</span><span class="p">:</span><span class="w"> </span><span class="mi">1445199652859</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"updatedAt"</span><span class="p">:</span><span class="w"> </span><span class="mi">1445199652234</span><span class="w">
-</span><span class="p">}</span><span class="w">
-</span></code></pre>
 
 <p>This endpoint deletes a device.</p>
 
@@ -839,7 +837,7 @@ mqtt://api.wia.io (port 1883) - Non-secure
 <p>Example Response</p>
 </blockquote>
 <pre class="highlight json"><code><span class="p">[</span><span class="w">
-  </span><span class="err">devices:</span><span class="w"> </span><span class="p">[{</span><span class="w">
+  </span><span class="s2">"devices"</span><span class="err">:</span><span class="w"> </span><span class="p">[{</span><span class="w">
     </span><span class="nt">"id"</span><span class="p">:</span><span class="w"> </span><span class="s2">"dev_23idgksdf0smd"</span><span class="p">,</span><span class="w">
     </span><span class="nt">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Device One"</span><span class="p">,</span><span class="w">
     </span><span class="nt">"isOnline"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
@@ -853,7 +851,7 @@ mqtt://api.wia.io (port 1883) - Non-secure
     </span><span class="nt">"createdAt"</span><span class="p">:</span><span class="w"> </span><span class="mi">1445199652859</span><span class="p">,</span><span class="w">
     </span><span class="nt">"updatedAt"</span><span class="p">:</span><span class="w"> </span><span class="mi">1445199652234</span><span class="w">
   </span><span class="p">}],</span><span class="w"> 
-  </span><span class="err">count:</span><span class="w"> </span><span class="mi">2</span><span class="w">
+  </span><span class="s2">"count"</span><span class="err">:</span><span class="w"> </span><span class="mi">2</span><span class="w">
 </span><span class="p">]</span><span class="w">
 </span></code></pre>
 
@@ -3719,7 +3717,7 @@ mqtt://api.wia.io (port 1883) - Non-secure
 <p>Example Response</p>
 </blockquote>
 <pre class="highlight json"><code><span class="p">[</span><span class="w">
-  </span><span class="err">users:</span><span class="w"> </span><span class="p">[{</span><span class="w">
+  </span><span class="s2">"users"</span><span class="err">:</span><span class="w"> </span><span class="p">[{</span><span class="w">
     </span><span class="nt">"id"</span><span class="p">:</span><span class="w"> </span><span class="s2">"user_jhdfg8ndfglk"</span><span class="p">,</span><span class="w">
     </span><span class="nt">"username"</span><span class="p">:</span><span class="w"> </span><span class="s2">"elliot@fsociety.com"</span><span class="p">,</span><span class="w">
     </span><span class="nt">"firstName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Elliot"</span><span class="p">,</span><span class="w">
@@ -3737,7 +3735,7 @@ mqtt://api.wia.io (port 1883) - Non-secure
     </span><span class="nt">"createdAt"</span><span class="p">:</span><span class="w"> </span><span class="mi">1444063382000</span><span class="p">,</span><span class="w">
     </span><span class="nt">"updatedAt"</span><span class="p">:</span><span class="w"> </span><span class="mi">1444063382000</span><span class="w">
   </span><span class="p">}],</span><span class="w"> 
-  </span><span class="err">count:</span><span class="w"> </span><span class="mi">2</span><span class="w">
+  </span><span class="s2">"count"</span><span class="err">:</span><span class="w"> </span><span class="mi">2</span><span class="w">
 </span><span class="p">]</span><span class="w">
 </span></code></pre>
 
