publish: quick change to authentications
generated from commit e6d311ccf8309a9c0cc6382d4afc4a4abfa312b8

--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@ wss://api.wia.io (port 3001) - Secure
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 <span class="kn">import</span> <span class="nn">io.wia.models.Device</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="n">getSecretKey</span><span class="o">());</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
 
 <span class="n">Device</span> <span class="n">retrievedDevice</span> <span class="o">=</span> <span class="n">Device</span><span class="o">.</span><span class="na">retrieve</span><span class="o">(</span><span class="s">"dev_kn18herg9"</span><span class="o">);</span>
 
@@ -1324,7 +1324,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="n">getSecretKey</span><span class="o">());</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
@@ -1887,7 +1887,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="n">getSecretKey</span><span class="o">());</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
@@ -2439,7 +2439,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="n">getSecretKey</span><span class="o">());</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
@@ -2963,7 +2963,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="n">getSecretKey</span><span class="o">());</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
