publish: added a comma
generated from commit 957febe6954f42a75546cf4f3b0922080690896b

--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@ wss://api.wia.io (port 3001) - Secure
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 <span class="kn">import</span> <span class="nn">io.wia.models.Device</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">);</span>
 
 <span class="n">Device</span> <span class="n">retrievedDevice</span> <span class="o">=</span> <span class="n">Device</span><span class="o">.</span><span class="na">retrieve</span><span class="o">(</span><span class="s">"dev_kn18herg9"</span><span class="o">);</span>
 
@@ -1324,7 +1324,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
@@ -1887,7 +1887,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
@@ -2621,7 +2621,7 @@ wss://api.wia.io (port 3001) - Secure
 <pre class="highlight python"><code><span class="kn">import</span> <span class="nn">wia</span>
 
 <span class="n">wia</span><span class="o">.</span><span class="n">Location</span><span class="o">.</span><span class="nb">list</span><span class="p">(</span>
-    <span class="n">device</span><span class="o">=</span><span class="s">"device_name"</span>
+    <span class="n">device</span><span class="o">=</span><span class="s">"device_name"</span><span class="p">,</span>
     <span class="n">limit</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span>
     <span class="n">page</span><span class="o">=</span><span class="mi">0</span>
   <span class="p">)</span>
@@ -2963,7 +2963,7 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret key"</span><span class="o">);</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">);</span>
 
 <span class="n">Wia</span><span class="o">.</span><span class="na">connectToStream</span><span class="o">();</span>
 
