--- a/index.html
+++ b/index.html
@@ -165,32 +165,39 @@ wss://api.wia.io (port 3001) - Secure
 </code></pre>
 <pre class="highlight javascript"><code><span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)(</span><span class="s1">'secret key or token'</span><span class="p">);</span>
 
-<span class="c1">// With access token in constructor object</span>
-<span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)({</span>
-    <span class="na">accessToken</span><span class="p">:</span> <span class="s1">'token'</span>
-<span class="p">});</span>
-
 <span class="c1">// With secret key in constructor object</span>
 <span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)({</span>
     <span class="na">secretKey</span><span class="p">:</span> <span class="s1">'secretKey'</span>
 <span class="p">});</span>
 
-<span class="c1">// With public key in constructor object</span>
+<span class="c1">// With application key in constructor object</span>
 <span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)({</span>
-    <span class="na">publicKey</span><span class="p">:</span> <span class="s1">'publicKey'</span>
+    <span class="na">appKey</span><span class="p">:</span> <span class="s1">'appKey'</span>
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="cp">#import "Wia.h"
 </span>
-<span class="p">[[</span><span class="n">WiaClient</span> <span class="nf">sharedInstance</span><span class="p">]</span> <span class="nf">setSecretKey</span><span class="p">:</span><span class="s">"secret_key"</span><span class="p">];</span>
+<span class="c1">// Set the secret key
+</span><span class="p">[[</span><span class="n">WiaClient</span> <span class="nf">sharedInstance</span><span class="p">]</span> <span class="nf">setSecretKey</span><span class="p">:</span><span class="s">"secret_key"</span><span class="p">];</span>
+
+<span class="c1">// Set the app key
+</span><span class="p">[[</span><span class="n">WiaClient</span> <span class="nf">sharedInstance</span><span class="p">]</span> <span class="nf">setAppKey</span><span class="p">:</span><span class="s">"app_key"</span><span class="p">];</span>
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
+<span class="c1">// Set the secret key</span>
 <span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">);</span>
+
+<span class="c1">// Set the app key</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setAppKey</span><span class="o">(</span><span class="s">"app_key"</span><span class="o">);</span>
 </code></pre>
 <pre class="highlight python"><code><span class="kn">import</span> <span class="nn">wia</span>
 
+<span class="c"># Set the secret key</span>
 <span class="n">wia</span><span class="o">.</span><span class="n">secret_key</span> <span class="o">=</span> <span class="s">"secret_key"</span>
+
+<span class="c"># Set the app key</span>
+<span class="n">wia</span><span class="o">.</span><span class="n">app_key</span> <span class="o">=</span> <span class="s">"app_key"</span>
 </code></pre>
 
 <p>If you are connecting using your own MQTT client, put your access token in the username field and blank space for the password.</p>
@@ -198,135 +205,6 @@ wss://api.wia.io (port 3001) - Secure
 <p><code class="prettyprint">Endpoint: mqtt://api.wia.io:1883 or mqtts://api.wia.io:8883</code><br>
 <code class="prettyprint">Username: &quot;token&quot;</code><br>
 <code class="prettyprint">Password: &quot; &quot; // Note the space</code>  </p>
-
-<h2 id="generate-an-access-token">Generate an access token</h2>
-
-<blockquote>
-<p>To generate a user access token, use this code:</p>
-</blockquote>
-<pre class="highlight shell"><code>curl https://api.wia.io/v1/auth/token <span class="se">\</span>
-    -d <span class="nv">username</span><span class="o">=</span>&lt;username&gt; <span class="se">\</span>
-    -d <span class="nv">password</span><span class="o">=</span>&lt;password&gt; <span class="se">\</span>
-    -d <span class="nv">grantType</span><span class="o">=</span>password <span class="se">\</span>
-    -d <span class="nv">scope</span><span class="o">=</span>user
-</code></pre>
-<pre class="highlight javascript"><code><span class="kd">var</span> <span class="nx">wia</span> <span class="o">=</span> <span class="nx">require</span><span class="p">(</span><span class="s1">'wia'</span><span class="p">)(</span><span class="s1">''</span><span class="p">);</span>
-<span class="kd">var</span> <span class="nx">accessToken</span> <span class="o">=</span> <span class="nx">wia</span><span class="p">.</span><span class="nx">generateAccessToken</span><span class="p">({</span>
-        <span class="na">username</span><span class="p">:</span> <span class="s2">"username"</span><span class="p">,</span>
-        <span class="na">password</span><span class="p">:</span> <span class="s2">"password"</span><span class="p">,</span>
-        <span class="na">grantType</span><span class="p">:</span> <span class="s2">"password"</span><span class="p">,</span>
-        <span class="na">scope</span><span class="p">:</span> <span class="s2">"user"</span>
-    <span class="p">},</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">accessToken</span><span class="p">)</span> <span class="p">{</span>
-        <span class="k">if</span> <span class="p">(</span><span class="nx">err</span><span class="p">)</span> <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">err</span><span class="p">);</span>
-        <span class="k">else</span> <span class="k">if</span> <span class="p">(</span><span class="nx">accessToken</span><span class="p">)</span> <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">accessToken</span><span class="p">);</span>
-    <span class="p">});</span>
-</code></pre>
-<pre class="highlight objective_c"><code><span class="cp">#import "Wia.h"
-</span>
-<span class="p">[[</span><span class="n">WiaClient</span> <span class="nf">sharedInstance</span><span class="p">]</span> <span class="nf">generateAccessToken</span><span class="p">:</span><span class="s">@"username"</span>
-  <span class="nf">password</span><span class="p">:</span><span class="s">@"password"</span>
-  <span class="nf">grantType</span><span class="p">:</span><span class="s">@"password"</span>
-  <span class="nf">scope</span><span class="p">:</span><span class="s">@"user"</span>
-  <span class="nf">success</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">WiaAccessToken</span> <span class="o">*</span><span class="n">accessToken</span><span class="p">)</span> <span class="p">{</span>
-  <span class="c1">// Got access token
-</span><span class="p">}</span> <span class="nf">failure</span><span class="p">:(</span><span class="kt">void</span> <span class="p">(</span><span class="o">^</span><span class="p">)(</span><span class="n">NSError</span> <span class="o">*</span><span class="n">error</span><span class="p">))</span><span class="n">failure</span><span class="p">{</span>
-  <span class="c1">// Failed
-</span><span class="p">}];</span>
-</code></pre>
-<pre class="highlight java"><code><span class="n">Not</span> <span class="n">available</span>
-</code></pre>
-<pre class="highlight python"><code><span class="n">Not</span> <span class="n">available</span>
-</code></pre>
-
-<blockquote>
-<p>Example of an access token</p>
-</blockquote>
-<pre class="highlight json"><code><span class="p">{</span><span class="w">
-    </span><span class="nt">"accessToken"</span><span class="p">:</span><span class="w"> </span><span class="s2">"u_kna8MAsd92ksdf00ksla0k2mhndf"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"refreshToken"</span><span class="p">:</span><span class="w"> </span><span class="s2">"u_mdfg8MMAS8msd912kasdf89mj"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"tokenType"</span><span class="p">:</span><span class="w"> </span><span class="s2">"bearer"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"expiresIn"</span><span class="p">:</span><span class="w"> </span><span class="s2">"0"</span><span class="p">,</span><span class="w">
-    </span><span class="nt">"scope"</span><span class="p">:</span><span class="w"> </span><span class="s2">"user"</span><span class="w">
-</span><span class="p">}</span><span class="w">
-</span></code></pre>
-
-<p>An access token may be generated for a user.</p>
-
-<p>By default, access tokens expire after 24 hours unless specified using <code class="prettyprint">expiresIn</code> parameter. For an access token that lives forever, set <code class="prettyprint">expiresIn</code> to <code class="prettyprint">0</code>.</p>
-
-<p>Access token request parameters:</p>
-
-<table><thead>
-<tr>
-<th>Parameter</th>
-<th>Type</th>
-<th>Description</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>username</td>
-<td>String</td>
-<td>Username of the entity requesting access.</td>
-</tr>
-<tr>
-<td>password</td>
-<td>String</td>
-<td>Password of the entity requesting access.</td>
-</tr>
-<tr>
-<td>expiresIn</td>
-<td>Number</td>
-<td>Number of seconds this token is valid for. 0 means forever.</td>
-</tr>
-<tr>
-<td>grantType</td>
-<td>String</td>
-<td>One of either &lsquo;password&rsquo; or &#39;refreshToken&rsquo;.</td>
-</tr>
-<tr>
-<td>scope</td>
-<td>String</td>
-<td>Scope of the access token that is being requested. Default is &#39;user&rsquo;.</td>
-</tr>
-</tbody></table>
-
-<p>All access tokens are made up of the same object structure.</p>
-
-<p>The Access Token object</p>
-
-<table><thead>
-<tr>
-<th>Parameter</th>
-<th>Type</th>
-<th>Description</th>
-</tr>
-</thead><tbody>
-<tr>
-<td>accessToken</td>
-<td>String</td>
-<td>Unique access token that is used for all requests.</td>
-</tr>
-<tr>
-<td>refreshToken</td>
-<td>String</td>
-<td>Unique refresh token that is used to generate a new access token.</td>
-</tr>
-<tr>
-<td>tokenType</td>
-<td>String</td>
-<td>The type of access token.</td>
-</tr>
-<tr>
-<td>expiresIn</td>
-<td>Number</td>
-<td>Number of seconds this token is valid for. 0 means forever.</td>
-</tr>
-<tr>
-<td>scope</td>
-<td>String</td>
-<td>Scope of the access token.</td>
-</tr>
-</tbody></table>
 
 <h1 id="stream">Stream</h1>
 
@@ -1091,7 +969,7 @@ wss://api.wia.io (port 3001) - Secure
 <tr>
 <td>order</td>
 <td>String</td>
-<td>&#39;createdAt&rsquo;</td>
+<td>&lsquo;createdAt&rsquo;</td>
 <td>Field to sort by. Valid values include name and lastUpdated.</td>
 </tr>
 <tr>
@@ -4149,7 +4027,7 @@ wss://api.wia.io (port 3001) - Secure
 </tr>
 </tbody></table>
 
-<h2 id="delete-a-user">Delete a user</h2>
+<h2 id="delete-a-customer">Delete a customer</h2>
 
 <blockquote>
 <p>Example Request</p>
