--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamReconnect"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream reconnecting!"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -312,7 +312,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamDisconnect"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream disconnected!"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -330,7 +330,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamOffline"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream offline"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -349,7 +349,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamError"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream error"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
