--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="n">wia</span><span class="o">.</span><span class="n">app_key</span> <span class="o">=</span> <span class="s">"app_key"</span>
 </code></pre>
 
-<p>If you are connecting using your own MQTT client, put your access token in the username field and blank space for the password.</p>
+<p>If you are connecting using your own MQTT or Websocket client, put your access token in the username field and blank space for the password.</p>
 
 <p><code class="prettyprint">Endpoint: mqtt://api.wia.io:1883 or mqtts://api.wia.io:8883</code><br>
 <code class="prettyprint">Username: &quot;token&quot;</code><br>
@@ -293,7 +293,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamReconnect"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream reconnecting"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -311,7 +311,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamDisconnect"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream disconnected"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -329,7 +329,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamOffline"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream offline"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -348,7 +348,7 @@ wss://api.wia.io (port 3001) - Secure
 <span class="p">});</span>
 </code></pre>
 <pre class="highlight objective_c"><code><span class="p">[[</span><span class="n">NSNotificationCenter</span> <span class="nf">defaultCenter</span><span class="p">]</span> <span class="nf">addObserverForName</span><span class="p">:</span><span class="s">@"WiaStreamError"</span> <span class="nf">object</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">queue</span><span class="p">:</span><span class="nb">nil</span> <span class="nf">usingBlock</span><span class="p">:</span><span class="o">^</span><span class="p">(</span><span class="n">NSNotification</span> <span class="o">*</span> <span class="n">_Nonnull</span> <span class="n">note</span><span class="p">)</span> <span class="p">{</span>
-    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream connected"</span><span class="p">)</span><span class="err">;</span>
+    <span class="n">NSLog</span><span class="p">(</span><span class="s">@"Stream error"</span><span class="p">)</span><span class="err">;</span>
 <span class="p">})</span><span class="err">;</span>
 </code></pre>
 <pre class="highlight java"><code><span class="n">Not</span> <span class="n">supported</span>
@@ -1100,6 +1100,10 @@ wss://api.wia.io (port 3001) - Secure
 
 <p><code class="prettyprint">POST https://api.wia.io/v1/events</code></p>
 
+<h3 id="mqtt-topic">MQTT Topic</h3>
+
+<p><code class="prettyprint">devices/:deviceId/events/:eventName</code></p>
+
 <h3 id="authorization">Authorization</h3>
 
 <table><thead>
@@ -1668,6 +1672,10 @@ wss://api.wia.io (port 3001) - Secure
 
 <p><code class="prettyprint">POST https://api.wia.io/v1/sensors</code></p>
 
+<h3 id="mqtt-topic">MQTT Topic</h3>
+
+<p><code class="prettyprint">devices/:deviceId/sensors/:sensorName</code></p>
+
 <h3 id="authorization">Authorization</h3>
 
 <table><thead>
@@ -2233,6 +2241,10 @@ wss://api.wia.io (port 3001) - Secure
 
 <p><code class="prettyprint">POST https://api.wia.io/v1/locations</code></p>
 
+<h3 id="mqtt-topic">MQTT Topic</h3>
+
+<p><code class="prettyprint">devices/:deviceId/locations</code></p>
+
 <h3 id="authorization">Authorization</h3>
 
 <table><thead>
@@ -2732,6 +2744,10 @@ wss://api.wia.io (port 3001) - Secure
 <h3 id="http-request">HTTP Request</h3>
 
 <p><code class="prettyprint">POST https://api.wia.io/v1/logs</code></p>
+
+<h3 id="mqtt-topic">MQTT Topic</h3>
+
+<p><code class="prettyprint">devices/:deviceId/logs/:logLevel</code></p>
 
 <h3 id="authorization">Authorization</h3>
 
