--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-YOURKEY', 'auto');
+ga('create', 'UA-65891850-5', 'auto');
 ga('send', 'pageview');
 //This does hash-click tracking (inspired by http://stackoverflow.com/a/4813223)
 $(document).ready(function() {
