publish: updated python return
generated from commit ec50b24d22fa60f157f4a78f56a112535c165865

--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@ Device Ids are required in the examples so &ldquo;<b>dev_qLsLQpLCt0CtJ6ki</b>&rd
 </code></pre>
 <pre class="highlight java"><code><span class="kn">import</span> <span class="nn">io.wia.Wia</span><span class="o">;</span>
 
-<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">;</span>
+<span class="n">Wia</span><span class="o">.</span><span class="na">setSecretKey</span><span class="o">(</span><span class="s">"secret_key"</span><span class="o">);</span>
 
 <span class="n">Map</span><span class="o">&lt;</span><span class="n">String</span><span class="o">,</span> <span class="n">Object</span><span class="o">&gt;</span> <span class="n">params</span> <span class="o">=</span> <span class="k">new</span> <span class="n">HashMap</span><span class="o">&lt;</span><span class="n">String</span><span class="o">,</span> <span class="n">Object</span><span class="o">&gt;();</span>
 <span class="n">params</span><span class="o">.</span><span class="na">put</span><span class="o">(</span><span class="s">"name"</span><span class="o">,</span> <span class="s">"testEvent"</span><span class="o">);</span>
@@ -1758,10 +1758,12 @@ Device Ids are required in the examples so &ldquo;<b>dev_qLsLQpLCt0CtJ6ki</b>&rd
 </code></pre>
 <pre class="highlight python"><code><span class="kn">import</span> <span class="nn">wia</span>
 
+<span class="n">wia</span><span class="o">.</span><span class="n">secret_key</span> <span class="o">=</span> <span class="s">"secret_key"</span>
+
 <span class="n">wia</span><span class="o">.</span><span class="n">Sensors</span><span class="o">.</span><span class="n">publish</span><span class="p">(</span>
-    <span class="n">name</span><span class="o">=</span><span class="s">"sensor_name"</span><span class="p">,</span>
-    <span class="n">data</span><span class="o">=</span><span class="mi">100</span>
-  <span class="p">)</span>
+  <span class="n">name</span><span class="o">=</span><span class="s">"sensor_name"</span><span class="p">,</span>
+  <span class="n">data</span><span class="o">=</span><span class="mi">100</span>
+<span class="p">)</span>
 
 </code></pre>
 
