--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
   color: #90a959;
 }
     </style>
-    <link href="slate/stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="slate/stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="slate/javascripts/all_nosearch.js"></script>
+    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all_nosearch.js"></script>
   </head>
 
   <body class="index" data-languages="[&quot;shell&quot;,&quot;javascript&quot;,&quot;objective_c&quot;,&quot;java&quot;,&quot;python&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="slate/images/navbar.png" />
+        <img src="images/navbar.png" />
       </span>
     </a>
     <div class="tocify-wrapper">
