--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
   color: #90a959;
 }
     </style>
-    <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print.css" rel="stylesheet" media="print" />
+    <link href="slate/stylesheets/screen.css" rel="stylesheet" media="screen" />
+    <link href="slate/stylesheets/print.css" rel="stylesheet" media="print" />
       <script src="javascripts/all_nosearch.js"></script>
   </head>
 
