--- a/index.html
+++ b/index.html
@@ -86,20 +86,20 @@
   color: #90a959;
 }
     </style>
-    <link href="slate/stylesheets/screen.css" rel="stylesheet" media="screen" />
-    <link href="slate/stylesheets/print.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all_nosearch.js"></script>
+    <link href="/slate/stylesheets/screen.css" rel="stylesheet" media="screen" />
+    <link href="/slate/stylesheets/print.css" rel="stylesheet" media="print" />
+      <script src="/slate/javascripts/all_nosearch.js"></script>
   </head>
 
   <body class="index" data-languages="[&quot;shell&quot;,&quot;javascript&quot;,&quot;objective_c&quot;,&quot;java&quot;,&quot;python&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar.png" />
+        <img src="/slate/images/navbar.png" />
       </span>
     </a>
     <div class="tocify-wrapper">
-      <img src="images/logo.svg" style="height: 34px;width:auto;margin: 10px auto 16px auto;" />
+      <img src="/images/logo.svg" style="height: 34px;width:auto;margin: 10px auto 16px auto;" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">curl</a>
               <a href="#" data-language-name="javascript">Node.js</a>
