--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </span>
     </a>
     <div class="tocify-wrapper">
-      <img src="/images/logo.svg" style="height: 34px;width:auto;margin: 10px auto 16px auto;" />
+      <img src="/slate/images/logo.svg" style="height: 34px;width:auto;margin: 10px auto 16px auto;" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">curl</a>
               <a href="#" data-language-name="javascript">Node.js</a>
